# date-cli-rs

./: Cargo.toml  readme.md
.github/workflows/: rust-cross.yml  rust.yml
src/: main.rs
