[package]
name = "date-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.0", features = ["derive"] }
parse_duration = "2.1.1"
regex = "1.8.1"
time = "0.3.20"
time-unit = "0.1.2"
